Bug 177014 - unable to configure shortcuts
Summary: unable to configure shortcuts
Status: RESOLVED FIXED
Alias: None
Product: kmplot
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Klaus-Dieter M
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-05 21:45 UTC by Alexander Potashev
Modified: 2011-09-05 20:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2008-12-05 21:45:13 UTC
Version:           1.2.0 (using 4.1.80 (KDE 4.1.80 (KDE 4.2 Beta1)), Gentoo)
Compiler:          x86_64-pc-linux-gnu-gcc
OS:                Linux (x86_64) release 2.6.27-rc7-zen3

"Configure Shortcuts..." menu item does nothing. I'd like to translate/zoom the plot using keyboard (it would be much faster and easier!).
Comment 1 Burkhard Lück 2009-11-11 16:46:43 UTC
Confirmed in recent branch 4.3 + trunk compiled from sources
Comment 2 Burkhard Lück 2011-09-05 20:07:22 UTC
Git commit 4abff56ae5889d0d81108ff9f4a55a20daa48ee8 by Burkhard Lück.
Committed on 05/09/2011 at 22:06.
Pushed by lueck into branch 'master'.

Enable Shortcuts + Toolbar configuration in KmPlot

REVIEW:101927
BUG:177014
BUG:268445

M  +1    -20   kmplot/kmplot.cpp
M  +0    -2    kmplot/kmplot.h
M  +1    -4    kmplot/kmplot_part.rc
M  +1    -1    kmplot/kmplot_part_readonly.rc
M  +0    -13   kmplot/kmplot_shell.rc
M  +0    -13   kmplot/maindlg.cpp
M  +0    -4    kmplot/maindlg.h
M  +0    -2    kmplot/org.kde.kmplot.KmPlot.xml

http://commits.kde.org/kmplot/4abff56ae5889d0d81108ff9f4a55a20daa48ee8
Comment 3 Burkhard Lück 2011-09-05 20:08:50 UTC
Git commit f125ed80ac810211fcf26be117fe0daea57dd2a4 by Burkhard Lück.
Committed on 05/09/2011 at 22:06.
Pushed by lueck into branch '4.7'.

Enable Shortcuts + Toolbar configuration in KmPlot

REVIEW:101927
CCBUG:177014
CCBUG:268445
(cherry picked from commit 4abff56ae5889d0d81108ff9f4a55a20daa48ee8)

M  +1    -20   kmplot/kmplot.cpp
M  +0    -2    kmplot/kmplot.h
M  +1    -4    kmplot/kmplot_part.rc
M  +1    -1    kmplot/kmplot_part_readonly.rc
M  +0    -13   kmplot/kmplot_shell.rc
M  +0    -13   kmplot/maindlg.cpp
M  +0    -4    kmplot/maindlg.h
M  +0    -2    kmplot/org.kde.kmplot.KmPlot.xml

http://commits.kde.org/kmplot/f125ed80ac810211fcf26be117fe0daea57dd2a4