Enable Shortcuts + Toolbar configuration in KmPlot

REVIEW:101927
BUG:177014
BUG:268445